# ssi-system

./: readme.md
ai-api/: certificate_verification_model.pkl  institution_encoder.pkl  issuer_encoder.pkl  pyproject.toml
ai-api/ai_api/: main.py
backend/: package-lock.json  package.json
backend/src/: DI.ts  contract.js  contract.ts  index.js
backend/src/credential/services/: index.js
backend/src/database/: firebase.js
backend/src/did/services/: index.js
backend/src/interfaces/: Contract.ts
backend/src/services/credential/: index.js
backend/src/services/fhir/: index.js
backend/src/types/: schema.js  types.ts
contract/: ssi.sol
frontend/: auth.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx  server.ts
frontend/app/()/: layout.tsx  page.tsx
frontend/app/()/auth/: page.tsx
frontend/app/(admin)/: layout.tsx
frontend/app/(user)/: layout.tsx
frontend/app/auth/: page.tsx
frontend/app/components/: Auth.tsx  ConnectWallet.tsx  Credentials.tsx  Dids.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  IssueCredForm.tsx  Login.tsx  Logout.tsx  MedicalLicenseVerification.tsx  Navbar.tsx  SignIn.tsx  Verify.tsx  request-form.tsx  request-status.tsx  steps.tsx
frontend/app/profile/: page.tsx
frontend/app/verify/: page.tsx
frontend/components/dashboard/: cards.tsx  credentials-manager.tsx  dids-manager.tsx  header.tsx  requests-manager.tsx  sidebar.tsx
frontend/components/ui/: sidebar.tsx
frontend/contract/: ssi.sol
frontend/lib/: contract.ts  firebase.ts  utils.ts
frontend/providers/: Providers.tsx
(+31 files in other folders)
