[tool.poetry]
name = "ai-api"
version = "0.1.0"
description = ""
authors = ["Muhammad-Masood <development.masood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
requests = "^2.32.3"
joblib = "^1.4.2"
numpy = "^2.2.5"
pydantic = "^2.11.4"
xgboost = "^3.0.0"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
